[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Sam Nordlinger <snordlinger@gmail.com>"]
license = "CC-BY-NC-4.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
