[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Sam Nordlinger <snordlinger@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pysdl2 = "^0.9.7"
pysdl2-dll = "^2.0.12"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
